--- a/stylesheet.css
+++ b/stylesheet.css
@@ -133,3 +133,27 @@ h2 {
 span.highlight {
   background-color: #ffffd0;
 }
+
+/* hides actual cursor */
+.body{
+  cursor: none;
+}
+
+.cursor-dot {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  border-radius: 50%;
+  background-color: #000;
+  pointer-events: none;
+}
+
+.cursor-circle {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 1px solid #000;
+  background-color: transparent;
+  pointer-events: none;
+}
